# SDL_2_SimpleGame

./: .gitignore  CMakeLists.txt  README.md  bug
images/: character_malePerson_sheetHD.xml
include/: messageInfo.hpp
include/client/: clientComonFunc.hpp
include/client/GameInterface/: chatBox.hpp  enemy.hpp  player.hpp
include/client/HttpServer/: clientServer.hpp
include/publicLib/: messagePacker.hpp
include/server/: characterManager.hpp  gameServer.hpp  gameService.hpp  serverComonFunc.hpp
logs/client/: logfile
logs/server/: logfile
src/: CMakeLists.txt
src/client/: CMakeLists.txt  clientComonFunc.cpp  main.cpp
src/client/GameInterface/: chatBox.cpp  enemy.cpp  player.cpp
src/client/HttpServer/: clientServer.cpp
src/publicLib/: CMakeLists.txt  messagePacker.cpp
src/server/: CMakeLists.txt  characterManager.cpp  gameServer.cpp  gameService.cpp  main.cpp  serverComonFunc.cpp
test/: CMakeLists.txt
test/character/: CMakeLIsts.txt
